tests/baselines/reference/propertyIdentityWithPrivacyMismatch(strict=true).errors.txt
propertyIdentityWithPrivacyMismatch_1.ts(5,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'Foo', but here has type 'Foo'.
propertyIdentityWithPrivacyMismatch_1.ts(7,13): error TS7008: Member 'n' implicitly has an 'any' type.
propertyIdentityWithPrivacyMismatch_1.ts(10,13): error TS7008: Member 'n' implicitly has an 'any' type.
propertyIdentityWithPrivacyMismatch_1.ts(13,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'Foo1', but here has type 'Foo2'.


==== propertyIdentityWithPrivacyMismatch_1.ts (4 errors) ====
    ///<reference path='propertyIdentityWithPrivacyMismatch_0.ts'/>
    import m1 = require('mod1');
    import m2 = require('mod2');
    var x: m1.Foo;
    var x: m2.Foo; // Should be error (mod1.Foo !== mod2.Foo)
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'Foo', but here has type 'Foo'.
!!! related TS6203 propertyIdentityWithPrivacyMismatch_1.ts:4:5: 'x' was also declared here.
    class Foo1 {
        private n;
                ~
!!! error TS7008: Member 'n' implicitly has an 'any' type.
    }
    class Foo2 {
        private n;
                ~
!!! error TS7008: Member 'n' implicitly has an 'any' type.
    }
    var y: Foo1;
    var y: Foo2;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'Foo1', but here has type 'Foo2'.
!!! related TS6203 propertyIdentityWithPrivacyMismatch_1.ts:12:5: 'y' was also declared here.
==== propertyIdentityWithPrivacyMismatch_0.ts (0 errors) ====
    declare module 'mod1' {
        class Foo {
            private n;
        }
    }
    declare module 'mod2' {
        class Foo {
            private n;
        }
    }
    